makefile static pattern

--- a/makefile/make/make_pattern/static_pattern_rules/static_pattern_multi/Makefile
+++ b/makefile/make/make_pattern/static_pattern_rules/static_pattern_multi/Makefile
@@ -7,9 +7,10 @@ all: $(files)
 CFLAGS = -g
 CFLAGS1 = -shared -fPIC
 $(filter %.o,$(files)): %.o: %.c
+	@echo $(filter %.o,$(files))
 	$(CC) -c $(CFLAGS) $< -o $@
-	#echo $(filter %.o,$(files))
 $(filter %.so,$(files)): %.so: %.c
+	@echo $(filter %.so,$(files))
 	$(CC) -c $(CFLAGS1) $< -o $@
 
 
