--- a/makefile/make/make_pattern/suffix_rule/suffix_single/Makefile
+++ b/makefile/make/make_pattern/suffix_rule/suffix_single/Makefile
@@ -3,6 +3,7 @@
 CFLAGS_TMP = -g -Wall
 files = foo
 
+#A single-suffix rule is defined by a single suffix, which is the source suffix. It matches any file name, and the corresponding implicit prerequisite name is made by appending the source suffix. A single-suffix rule whose source suffix is ‘.c’ is equivalent to the pattern rule ‘% : %.c’.
 # 下面两行注释掉， 看下结果中没有 -g
 # 单后缀规则,表示由 .c 文件 , 隐含生成可执行文件的规则 
 .c:
