--- a/open_source/netcat-0.7.1/Makefile.am
+++ b/open_source/netcat-0.7.1/Makefile.am
@@ -25,4 +25,5 @@ EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL README TODO
 
 ## Proceed to subdirs
 
-SUBDIRS = lib src
+#SUBDIRS = lib src
+SUBDIRS = src
