--- a/libevent/libevent2/libevent/sample/study-http/Makefile
+++ b/libevent/libevent2/libevent/sample/study-http/Makefile
@@ -1,16 +1,24 @@
 .PHONY:clean all
 CC=gcc
-CFLAGS=-Wall -g -static
+CFLAGS=-Wall -g 
 VPATH=../../include
 INCLUDE = -I../../include  -I..
 
 LIB = -L../../.libs -levent -lrt
+LIBHTTPS = -L../../.libs ../../.libs/libevent.a ../../.libs/libevent_openssl.a -lssl -lcrypto  ../libcurl.a 
 
-VPATH=../
-BIN=http-server myserver evhttp_new http-connect myconnect https-client
-all:$(BIN)
-%:%.c
-	$(CC) $(CFLAGS)  $<  $(LIB)  $(INCLUDE) -o $@
+BIN=http-server myserver evhttp_new http-connect myconnect 
+
+BINHTTPS=https-client
+
+all:$(BIN) $(BINHTTPS)
+
+$(BIN):%:%.c 
+	$(CC) $(CFLAGS)  $^ $(LIB) $(INCLUDE) -o $@
+
+$(BINHTTPS):%:%.c ../openssl_hostname_validation.c
+	$(CC) $(CFLAGS)  $^ $(LIBHTTPS) $(INCLUDE) -o $@
+
 clean:
-	rm -f *.o $(BIN)
+	rm -f *.o $(BIN) $(BINHTTPS)
 
