--- a/cpp/insideObjectModel/semanticsFunction/member_function/Makefile
+++ b/cpp/insideObjectModel/semanticsFunction/member_function/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g --save-temps
-BIN= Point3d  name_mangling Point3d_virtual Point3d_static
+BIN= Point3d  name_mangling Point3d_virtual Point3d_static const_fun
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -lm -o $@
