named return value

--- a/cpp/insideObjectModel/semanticsConstructors/copyConstructor/Makefile
+++ b/cpp/insideObjectModel/semanticsConstructors/copyConstructor/Makefile
@@ -1,7 +1,8 @@
 .PHONY:clean all
 CC=g++
-CFLAGS=-Wall -g --save-temps -fdump-class-hierarchy
-BIN=  trivial member_class base_class virtualFunction virtualBaseClass
+CFLAGS=-Wall -g --save-temps -fdump-class-hierarchy -fdump-tree-nrv -fno-elide-constructors
+#CFLAGS=-Wall -g --save-temps -fdump-class-hierarchy -fdump-tree-nrv 
+BIN=  trivial member_class base_class virtualFunction virtualBaseClass nrv
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -lm -o $@
