--- a/linux/gnu-pth/my_pth/Makefile
+++ b/linux/gnu-pth/my_pth/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= makecontext infinite_loop iterator
+BIN= makecontext infinite_loop iterator swapcontext
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
