--- a/linux/automake/hellofuck/src/Makefile.am
+++ b/linux/automake/hellofuck/src/Makefile.am
@@ -1,6 +1,6 @@
 # whatever flags you want to pass to the C compiler & linker
-CFLAGS = --pedantic -Wall -std=c99 -O0
-LDFLAGS = -lm
+AM_CFLAGS = --pedantic -Wall -std=c99 -O0
+AM_LDFLAGS = -lm
 
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
