--- a/linux/automake/hellofuck/configure.ac
+++ b/linux/automake/hellofuck/configure.ac
@@ -4,7 +4,12 @@
 #AC_PREREQ(2.57)
 AC_INIT(hellofuck, 1.0, mij@bitchx.it)
 #AM_INIT_AUTOMAKE(hellofuck, 1.0)
-AM_INIT_AUTOMAKE
+#AM_INIT_AUTOMAKE
+#https://stackoverflow.com/questions/21773003/error-in-automake
+#Makefile.am: error: required file './NEWS' not found
+#Probably adding foreign to AM_INIT_AUTOMAKE macro in configure.ac could be helpful in this case.
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+
 AC_CONFIG_SRCDIR([src/fuck.c])
 
 # Checks for programs.
