--- a/develop/entry/Makefile.am
+++ b/develop/entry/Makefile.am
@@ -4,4 +4,4 @@ AM_CXXFLAGS = --pedantic -Wall -O0 -std=c++11
 # this lists the binaries to produce, the (non-PHONY, binary) targets in
 # the previous manual Makefile
 bin_PROGRAMS = entry 
-entry_SOURCES = main.cpp z_memcheck.cpp 
+entry_SOURCES = entry.cpp z_memcheck.cpp 
