the format of zd

--- a/c/printf/Makefile
+++ b/c/printf/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g -save-temps
-BIN= main  main_backslash
+BIN= main  main_backslash devidedbyzero format_zd
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
