--- a/cpp/override_overload_hide/Makefile
+++ b/cpp/override_overload_hide/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=g++
 CPPFLAGS=-Wall -g --save-temps
-BIN= hide hide1 hide2
+BIN= hide hide1 hide2 hide3
 all:$(BIN)
 %:%.c
 	$(CC) $(CPPFLAGS)  $< -o $@ 
