--- a/algrithm/sort/quicksort_my/Makefile
+++ b/algrithm/sort/quicksort_my/Makefile
@@ -2,7 +2,7 @@
 CC=g++
 #CFLAGS=-Wall -save-temps -O1
 CFLAGS=-Wall -g -save-temps -std=c++11
-BIN= quicksort  quicksort1
+BIN= quicksort  quicksort1  quicksort2
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
