--- a/algrithm/sort/heap_sort/Makefile
+++ b/algrithm/sort/heap_sort/Makefile
@@ -3,7 +3,7 @@ CC=g++
 
 CFLAGS=-Wall -g -save-temps -O1
 CPPFLAGS=-Wall -g -save-temps -std=c++11
-BIN= main1 heapify
+BIN= main1 heapify heapify_my
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
