--- a/algrithm/maxsumarray/Makefile
+++ b/algrithm/maxsumarray/Makefile
@@ -1,9 +1,10 @@
 .PHONY:clean all
-CC=gcc
+CC=g++
 #CFLAGS=-Wall -save-temps -O1
 #CFLAGS=-Wall -g -save-temps
-CFLAGS=-Wall -g 
-BIN= maxSubArray
+CFLAGS=-Wall -g  -std=c++11
+CPPFLAGS=-Wall -g  -std=c++11 
+BIN= maxSubArray maxSubArray1
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
