--- a/algrithm/inet_aton/Makefile
+++ b/algrithm/inet_aton/Makefile
@@ -3,7 +3,7 @@ CC=g++
 #CFLAGS=-Wall -save-temps -O1
 CXXFLAGS=-Wall -g -save-temps
 #BIN=  main main1 main_my
-BIN= inet_aton  inet_aton1 inet_aton_my inet_aton_1
+BIN= inet_aton  inet_aton1 inet_aton_my inet_aton_1 inet_ntoa_my
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
