--- a/cpp/c++template/examples_my/9chapter/Makefile
+++ b/cpp/c++template/examples_my/9chapter/Makefile
@@ -2,7 +2,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g -ansi -W -Wall -pedantic
-BIN= syntax syntax1 typename template
+BIN= syntax syntax1 typename template template1 typename1
 all:$(BIN)
 %:%.cpp
 	$(CC) $(CFLAGS)   $< -o $@
