template template 编译通过

--- a/cpp/c++template/examples_my/5chapter/templateTemplate/Makefile
+++ b/cpp/c++template/examples_my/5chapter/templateTemplate/Makefile
@@ -1,7 +1,8 @@
 #
 .PHONY:clean all
 CC=g++
-CFLAGS=-Wall -g -ansi -W -Wall -pedantic
+#CFLAGS=-Wall -g -ansi -W -Wall -pedantic
+CFLAGS=-Wall -g -std=c++11 -W -Wall -pedantic
 BIN= stack7test 
 all:$(BIN)
 %:%.cpp
