trait and police

--- a/cpp/c++template/examples_my/15chapter/Makefile
+++ b/cpp/c++template/examples_my/15chapter/Makefile
@@ -2,7 +2,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g -std=c++11 -W -Wall -pedantic -Wno-enum-compare 
-BIN= accum1 accum2 accum3 accum4 accum5 accum6 accum7 accum8
+BIN= accum1 accum2 accum3 accum4 accum5 accum6 accum7 accum8 sizeof elementtype isclasst apply1 apply2 rparam1 rparam2
 all:$(BIN)
 %:%.cpp
 	$(CC) $(CFLAGS)   $< -o $@
