--- a/cryptography/des/des/Makefile
+++ b/cryptography/des/des/Makefile
@@ -1,4 +1,4 @@
-CFLAGS 		= -W -Wall -pedantic -ansi -D_XOPEN_SOURCE --std=c99
+CFLAGS 		= -g -W -Wall 
 SRCS  		= main.c mode.c des.c tools.c key.c
 OBJS		= $(SRCS:.c=.o)
 
