aes The key schedule

--- a/cryptography/aes/tiny-AES-ecb/Makefile
+++ b/cryptography/aes/tiny-AES-ecb/Makefile
@@ -3,8 +3,8 @@
 #OBJCOPY      = avr-objcopy
 CC           = gcc
 LD           = gcc
-CFLAGS       = -Wall -Os -c
-LDFLAGS      = -Wall -Os -Wl,-Map,test.map
+CFLAGS       = -Wall -c -g
+LDFLAGS      = -Wall -Wl,-Map,test.map
 
 OBJCOPYFLAFS = -j .text -O ihex
 OBJCOPY      = objcopy
