--- a/cpp/c++11/forward/Makefile
+++ b/cpp/c++11/forward/Makefile
@@ -2,7 +2,7 @@
 CC=g++ 
 
 CFLAGS = -std=c++11 -g --save-temps
-BIN=  forward1 forward2 forward3 forward4 forward5 remove_reference forward6
+BIN=  forward1 forward2 forward3 forward4 forward5 remove_reference forward6 forward7
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -o $@
