--- a/cpp/c++11/function/Makefile
+++ b/cpp/c++11/function/Makefile
@@ -2,7 +2,7 @@
 CC=g++ 
 
 CFLAGS = -std=c++11 -g --save-temps
-BIN= func mem_fn mem_fn_14
+BIN= func mem_fn mem_fn_14 func1
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -o $@
