--- a/linux/automake/ac_subst/ac_subst/configure.ac
+++ b/linux/automake/ac_subst/ac_subst/configure.ac
@@ -6,6 +6,10 @@ AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
+
+# 在这里定义变量
+AC_SUBST([PERCENT_SIGN],[%])
+
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
