--- a/uwsgi/example3/etc/uwsgi.ini
+++ b/uwsgi/example3/etc/uwsgi.ini
@@ -1,9 +1,12 @@
 [uwsgi]
-master = true
+master = true 
 processes = 2
-threads = 2
-http = 0.0.0.0:9090 
+threads = 2 
+socket=127.0.0.1:3031
+#socket = /tmp/uwsgi.sock
+#http = 0.0.0.0:9090 
 module = server:app
+#uwsgi_pass unix:///tmp/uwsgi.sock;
 
 
 # ./uwsgi --http :9090 --wsgi-file foobar.py --master --processes 4 --threads 2
