--- a/uwsgi/example3/etc/uwsgi_sock.ini
+++ b/uwsgi/example3/etc/uwsgi_sock.ini
@@ -1,8 +1,11 @@
 [uwsgi]
-master = true
+master = true 
 processes = 2
-threads = 2
-http = 0.0.0.0:9090 
+threads = 2 
+uid = www-data:www-data 
+socket = /tmp/uwsgi.sock
+#socket=127.0.0.1:3031
+#http = 0.0.0.0:9090 
 module = server:app
 
 
