--- a/uwsgi/WSGIServer/etc/uwsgi.ini
+++ b/uwsgi/WSGIServer/etc/uwsgi.ini
@@ -2,8 +2,8 @@
 master = true 
 processes = 2
 threads = 2 
-socket = /tmp/uwsgi.sock
-#socket=127.0.0.1:3031
+socket=127.0.0.1:3031
+#socket = /tmp/uwsgi.sock
 #http = 0.0.0.0:9090 
 #module = server:app
 
