--- a/uwsgi/WSGIServer/etc/uwsgi_sock.ini
+++ b/uwsgi/WSGIServer/etc/uwsgi_sock.ini
@@ -3,13 +3,12 @@ master = true
 processes = 2
 threads = 2 
 socket = /tmp/uwsgi.sock
-#socket=127.0.0.1:3031
-#http = 0.0.0.0:9090 
-#module = server:app
+module = server:app
+gevent = 100
+socket-timeout = 30
+stats = 0.0.0.0:9090
 
-mount=/myapp=server:app
-manage-script-name=true
-
+#manage-script-name=true
 
 # ./uwsgi --http :9090 --wsgi-file foobar.py --master --processes 4 --threads 2
 
