--- a/share_cvm/echo-server/Makefile
+++ b/share_cvm/echo-server/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g
-BIN=epoll_echo_server_et epoll_echo_server_lt
+BIN=epoll_echo_server_et epoll_echo_server_lt not_accept server client
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
