--- a/c/shared_libray/static/Makefile
+++ b/c/shared_libray/static/Makefile
@@ -1,3 +1,12 @@
-test:test.c
+test:test.c libit.a
 	gcc -Wall test.c libit.a -o test
+
+libit.a:it.o
+	ar rcs libit.a it.o 
+
+
+
+:PHNOY clean
+clean:
+	-rm -f  *.o *.so *.a
 
