--- a/erlang/my_erlang/socket/Makefile
+++ b/erlang/my_erlang/socket/Makefile
@@ -14,6 +14,8 @@ RUN_BIN=socket_examples_1
 RUN_BIN=nano_server
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
+	#erl -noshell -s nano_server start client -s init stop
+
 
 compile:${MODS:%=%.beam} 
 
