--- a/erlang/my_erlang/socket/Makefile
+++ b/erlang/my_erlang/socket/Makefile
@@ -12,6 +12,8 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=socket_examples_1
 RUN_BIN=nano_server
+RUN_BIN=nano_server_active_false
+RUN_BIN=nano_server_active_true
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
