--- a/erlang/my_erlang/socket_udp/Makefile
+++ b/erlang/my_erlang/socket_udp/Makefile
@@ -10,12 +10,7 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=socket_examples_1
-RUN_BIN=nano_server
-RUN_BIN=nano_server_active_true
-RUN_BIN=nano_server_active_false
-RUN_BIN=nano_server_active_once
-RUN_BIN=socket_error
+RUN_BIN=udp_test
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
