--- a/erlang/my_erlang/record/Makefile
+++ b/erlang/my_erlang/record/Makefile
@@ -10,13 +10,15 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=udp_test
-RUN_BIN=udp_active_true
-RUN_BIN=udp_active_false
-RUN_BIN=udp_active_false_fac
-RUN_BIN=binary_to_term
+RUN_BIN=records
+RUN_BIN=records_1
+RUN_BIN=records_2
+RUN_BIN=records_3
+RUN_BIN=records_4
+RUN_BIN=records_5
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
+	#erl -noshell -run $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
 
 
