--- a/erlang/my_erlang/spawn/Makefile
+++ b/erlang/my_erlang/spawn/Makefile
@@ -1,21 +1,27 @@
-.PHONY:clean all
+#.PHONY:clean all
+.SUFFIXES: .erl .beam
 
 
-BIN := $(patsubst %.erl,%, $(wildcard *.erl))
+.erl.beam:
+	erlc -W $<
 
-all:$(BIN)
-%:%.erl
-	erlc $< 
+ERL = erl -boot start_clean
 
-compile: clean
-	erlc  $(BIN).erl
+MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=spawn
-RUN_BIN=afile_server
-RUN_BIN=afile_client_test
-RUN_BIN=afile_client
-run:
-	erl -noshell -s $(RUN_BIN) start  -s init stop
+RUN_BIN=spawn_1
+RUN_BIN=dolphins
+all:compile
+	erl -noshell -s $(RUN_BIN) start -s init stop
+	#erl -noshell -run $(RUN_BIN) start -s init stop
+	#erl -noshell -s nano_server start client -s init stop
+
+
+compile:${MODS:%=%.beam} 
+
+#RUN_BIN=hello
+#run:
+#	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
 	rm -f *.beam
