--- a/erlang/my_erlang/spawn/Makefile
+++ b/erlang/my_erlang/spawn/Makefile
@@ -12,6 +12,7 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 RUN_BIN=spawn_1
 RUN_BIN=dolphins
 RUN_BIN=kitchen
+RUN_BIN=multiproc
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
