--- a/erlang/my_erlang/reminder/src/Makefile
+++ b/erlang/my_erlang/reminder/src/Makefile
@@ -12,6 +12,7 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 RUN_BIN=my_event
 RUN_BIN=event_delay
 RUN_BIN=event_datatime
+RUN_BIN=sup
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
