--- a/erlang/my_erlang/ets/update_counter/Makefile
+++ b/erlang/my_erlang/ets/update_counter/Makefile
@@ -9,7 +9,12 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=ets_match
+RUN_BIN=ets_update_op
+RUN_BIN=ets_update_op_default
+RUN_BIN=ets_update_op_list
+RUN_BIN=ets_update_op_list_default
+RUN_BIN=ets_update_incr
+RUN_BIN=ets_update_incr_default
 RUN_BIN=ets_deadlock
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
