--- a/erlang/my_erlang/random/Makefile
+++ b/erlang/my_erlang/random/Makefile
@@ -9,14 +9,8 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=ets_update_op
-RUN_BIN=ets_update_op_default
-RUN_BIN=ets_update_op_list
-RUN_BIN=ets_update_op_list_default
-RUN_BIN=ets_update_incr
-RUN_BIN=ets_update_incr_default
-RUN_BIN=ets_deadlock_1
 RUN_BIN=ets_deadlock
+RUN_BIN=random_1
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
