--- a/erlang/my_erlang/mnesia/Makefile
+++ b/erlang/my_erlang/mnesia/Makefile
@@ -11,9 +11,10 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=database_logic
 RUN_BIN=database_logic_analyze
+RUN_BIN=database_logic_create_scheme
 RUN_BIN=database_logic_debug
 all:compile
-	erl -noshell -s $(RUN_BIN) start -s init stop
+	erl  -sname apple -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
 
