--- a/rabbitmq_erlang_client/client_example/Makefile
+++ b/rabbitmq_erlang_client/client_example/Makefile
@@ -4,7 +4,11 @@
 
 .erl.beam:
 	#erlc  -I ~/programming/rabbitmq_erlang_client/amqp_client/include/  -pa  ~/programming/rabbitmq_erlang_client/amqp_client/deps/rabbit_common/ebin/  -W $<
-	erlc  -I ../amqp_client/include/  -pa  ../amqp_client/deps/rabbit_common/ebin/  -W $<
+	#erlc  -I ../amqp_client/include/  -pa  ../amqp_client/deps/rabbit_common/ebin/ -pa ../amqp_client/ebin/ -W $<
+	erlc  -I ../amqp_client/include/  -pa  ../amqp_client/deps/rabbit_common/ebin/ -pa ../amqp_client/ebin/  -pa ../amqp_client/src/ -W $<
+	#erlc  -I ../amqp_client/include/  -pa  ../amqp_client/deps/rabbit_common/ebin/  -pa ../amqp_client/src/ -W $<
+	#erlc  -I ../amqp_client/include/  -pa  ../amqp_client/deps/rabbit_common/ebin/ -pa ../amqp_client/ebin/ -E  $<
+
 
 ERL = erl -boot start_clean
 
@@ -12,7 +16,7 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=amqp_example
 all:compile
-	erl -noshell -s $(RUN_BIN) start -s init stop
+	erl -noshell -pa  ../amqp_client/deps/rabbit_common/ebin/ -pa ../amqp_client/ebin/  -s $(RUN_BIN) start_my -s init stop
 
 
 compile:${MODS:%=%.beam} 
