--- a/erlang_client_rebar3/erlang_client_1/rebar.config
+++ b/erlang_client_rebar3/erlang_client_1/rebar.config
@@ -5,6 +5,5 @@
 
 {shell, [
   % {config, "config/sys.config"},
-    {apps, [erlang_client_1]},
-    {erl_opts, [{i, "/home/ericksun/programming/rabbitmq_erlang_client/client_example_rabar3/erlang_client_1/_build/default/lib/amqp_client/"}]}
+    {apps, [erlang_client_1]}
 ]}.
