--- a/erlang_client_rebar3/erlang_client/rebar.config
+++ b/erlang_client_rebar3/erlang_client/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+	{amqp_client, "3.9.11"}
+]}.
 
 {relx, [{release, {erlang_client, "0.1.0"},
          [erlang_client,
