--- a/rabbitmq_erlang_client/dockerfile
+++ b/rabbitmq_erlang_client/dockerfile
@@ -1,30 +1,21 @@
 #FROM erlang:17.5.6.10
 #FROM  erlang:17
 
-#FROM   erlang:18.3.4.11
-FROM  erlang:17
+FROM   erlang:18.3.4.11
+#FROM  erlang:17
+
+# install  software
+RUN apt-get update
+RUN apt-get install  -y aptitude vim zip gdb net-tools sudo ssh less tmux tcpdump telnet strace 
+
+RUN service ssh restart
+
 
 # copy file
 RUN mkdir /data
 ADD amqp_client /data/amqp_client
 ADD client_example /data/client_example
 
-# install  software
-RUN apt-get update
-RUN apt-get install  -y aptitude 
-RUN apt-get install  -y vim 
-RUN apt-get install  -y zip 
-RUN apt-get install  -y gdb 
-RUN apt-get install  -y net-tools 
-RUN apt-get install  -y sudo
-RUN apt-get install  -y ssh 
-RUN apt-get install  -y less
-RUN apt-get install  -y tmux 
-RUN apt-get install  -y tcpdump 
-RUN apt-get install  -y telnet 
-RUN apt-get install  -y strace 
-
-RUN service ssh restart
 
 
 # compile
