--- a/rabbitmq_erlang_client/dockerfile
+++ b/rabbitmq_erlang_client/dockerfile
@@ -1,23 +1,54 @@
-#FROM erlang:17.5.6.10
-#FROM  erlang:17
+#FROM   erlang:18.3.4.11
+#
+# FROM erlang:24.1.7
+FROM erlang:17.5.6
 
-FROM   erlang:18.3.4.11
-#FROM  erlang:17
 
 # install  software
 RUN apt-get update
-RUN apt-get install  -y aptitude vim zip gdb net-tools sudo ssh less tmux tcpdump telnet strace 
+RUN apt-get install  -y aptitude 
+RUN aptitude install -y vim zip gdb net-tools sudo ssh less tmux tcpdump telnet strace 
 
 RUN service ssh restart
 
 
+
+# rabbitmq
+ADD ./software/rabbitmq-server-generic-unix-3.5.6.tar.gz /data
+ADD ./software/otp_src_24.2.1.tar.gz /data
+#ADD ./software/rabbitmq-server-generic-unix-3.6.9.tar.xz /data
+
+
+# https://www.systutorials.com/changing-linux-users-password-in-one-command-line/
+# echo "linuxpassword" | passwd --stdin linuxuser
+#echo -e "linuxpassword\nlinuxpassword" | passwd linuxuser
+#RUN echo "helloworld\nhelloworld" | passwd root 
+RUN sed  -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN sed  -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
+
+# 修改配置不然报错 debug1: Exit status 254
+RUN sed  -i 's/UsePAM yes/UsePAM no/' /etc/ssh/sshd_config
+RUN systemctl enable ssh
+
+RUN echo "123456\n123456" | passwd root 
+
+ADD start_up.sh /root/
+ADD bashrc /root/.bashrc
+ADD rc.local /etc/rc.local
+
 # copy file
-RUN mkdir /data
+RUN mkdir  -p data
 ADD amqp_client /data/amqp_client
 ADD client_example /data/client_example
-
 
 
 # compile
 RUN cd /data/amqp_client && make
 #RUN cd /data/client_example & make
+#
+
+# env
+#ENV PATH=$PATH:/data/rabbitmq_server-3.6.9/sbin
+ENV PATH=$PATH:/data/rabbitmq_server-3.5.6/sbin
+ENV ROOTDIR=/usr/local/lib/erlang
+ENV BINDIR=$ROOTDIR/erts-5.5.5/bin
