--- a/erlang/my_erlang/gen_server/kitty_server/Makefile
+++ b/erlang/my_erlang/gen_server/kitty_server/Makefile
@@ -9,13 +9,9 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=database_logic
-RUN_BIN=database_logic_analyze
-RUN_BIN=database_logic_create_scheme
-RUN_BIN=database_logic_debug
-RUN_BIN=factorial_client
+RUN_BIN=kitty_gen_server
 all:compile
-	erl  -sname apple -noshell -s $(RUN_BIN) start -s init stop
+	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
 
@@ -27,4 +23,4 @@ compile:${MODS:%=%.beam}
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
-	rm -f *.beam *.dump
+	rm -f *.beam
