--- a/erlang/my_erlang/gen_server/ch4/Makefile
+++ b/erlang/my_erlang/gen_server/ch4/Makefile
@@ -10,6 +10,7 @@ ERL = erl -boot start_clean
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=frequency
+RUN_BIN=frequency_reply
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
