--- a/erlang/my_erlang/gen_fsm/ch6/erlang/Makefile
+++ b/erlang/my_erlang/gen_fsm/ch6/erlang/Makefile
@@ -10,6 +10,7 @@ ERL = erl -boot start_clean
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=coffee_fsm
+RUN_BIN=earth
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
