--- a/erlang/my_erlang/gen_event/ch7/Makefile
+++ b/erlang/my_erlang/gen_event/ch7/Makefile
@@ -9,9 +9,11 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=logger
+RUN_BIN=io_example
+RUN_BIN=freq_overload
+RUN_BIN=logger_my
 all:compile
-	erl  -sname apple -noshell -s $(RUN_BIN) start -s init stop
+	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
 	#erl -noshell -s nano_server start client -s init stop
 
@@ -23,4 +25,4 @@ compile:${MODS:%=%.beam}
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
-	rm -f *.beam *.dump
+	rm -f *.beam
