--- a/erlang/my_erlang/gen_event/ch7/Makefile
+++ b/erlang/my_erlang/gen_event/ch7/Makefile
@@ -11,10 +11,10 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 #RUN_BIN=io_example
 #RUN_BIN=freq_overload
-#RUN_BIN=logger_my
 RUN_BIN=counters_my
 RUN_BIN=counters
 RUN_BIN=crash_example.erl
+RUN_BIN=logger_my
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 #erl -noshell -run $(RUN_BIN) start -s init stop
