--- a/erlang/my_erlang/register/Makefile
+++ b/erlang/my_erlang/register/Makefile
@@ -10,6 +10,7 @@ ERL = erl -boot start_clean
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=register_test
+RUN_BIN=apply_test
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
