--- a/erlang/my_erlang/release/rebar3/ernie2/bsc/rebar.config
+++ b/erlang/my_erlang/release/rebar3/ernie2/bsc/rebar.config
@@ -1,6 +1,10 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+%%{deps, []}.
+{deps, [
+	{lager, ".*", {git, "https://github.com/erlang-lager/lager", {branch, "master"}}}
+]}.
 
+%{goldrush, ".*", {git, "https://github.com/DeadZen/goldrush.git", {branch, "master"}}}
 {relx, [{release, {bsc, "1.0"},
          [bsc,
           sasl]},
