--- a/erlang/my_erlang/upgrade/ch12/Makefile
+++ b/erlang/my_erlang/upgrade/ch12/Makefile
@@ -9,6 +9,7 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
+#RUN_BIN=handle_release_appup
 RUN_BIN=handle_release
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
