--- a/erlang/my_erlang/upgrade/ch12/Makefile1.1
+++ b/erlang/my_erlang/upgrade/ch12/Makefile1.1
@@ -23,4 +23,4 @@ compile:${MODS:%=%.beam}
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
-	rm -rf rm *.script *.boot *.beam ernie
+	rm -rf handle_release_appup.beam
