--- a/erlang/my_erlang/rebar3/my_hex_pm/rebar.config
+++ b/erlang/my_erlang/rebar3/my_hex_pm/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
-
+{plugins, [rebar3_hex]}.
 {shell, [
   % {config, "config/sys.config"},
     {apps, [my_hex_pm]}
