--- a/erlang/my_erlang/rebar3/my_hex_pm/rebar.config
+++ b/erlang/my_erlang/rebar3/my_hex_pm/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [cowboy, meck]}.
+{deps, [cowboy, meck, amqp_client]}.
 {plugins, [rebar3_hex]}.
 {shell, [
   % {config, "config/sys.config"},
