--- a/erlang/my_erlang/rebar3/hello_server/rebar.config
+++ b/erlang/my_erlang/rebar3/hello_server/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+	{cowboy, "2.7.0"}
+]}.
 
 {relx, [{release, {hello_server, "0.1.0"},
          [hello_server,
