--- a/erlang/my_erlang/record/Makefile
+++ b/erlang/my_erlang/record/Makefile
@@ -17,6 +17,8 @@ RUN_BIN=records_3
 RUN_BIN=records_4
 RUN_BIN=records_5
 RUN_BIN=records_6
+RUN_BIN=records_7
+RUN_BIN=records_8
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
