--- a/erlang/my_erlang/map/Makefile
+++ b/erlang/my_erlang/map/Makefile
@@ -10,16 +10,9 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=records
-RUN_BIN=records_1
-RUN_BIN=records_2
-RUN_BIN=records_3
-RUN_BIN=records_4
-RUN_BIN=records_5
-RUN_BIN=records_6
-RUN_BIN=records_7
-RUN_BIN=records_8
-RUN_BIN=records_9
+RUN_BIN=map_1
+RUN_BIN=map_2
+RUN_BIN=map_1
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
