--- a/erlang/my_erlang/gen_server/rebar3/gen_server_release/rebar.config
+++ b/erlang/my_erlang/gen_server/rebar3/gen_server_release/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+          {recon, "2.5.2"}
+       ]}.
 
 {relx, [{release, {gen_server_release, "0.1.0"},
          [gen_server_release,
