--- a/erlang/my_erlang/gen_server/kitty_server/Makefile
+++ b/erlang/my_erlang/gen_server/kitty_server/Makefile
@@ -12,6 +12,7 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 RUN_BIN=kitty_gen_server_by_server_name_global
 RUN_BIN=kitty_gen_server_by_pid
 RUN_BIN=kitty_gen_server_by_server_name_local
+RUN_BIN=kitty_gen_server_by_server_name_via_global
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#erl -noshell -run $(RUN_BIN) start -s init stop
