--- a/erlang/my_erlang/gen_fsm/ch6/gen_fsm_app/rebar.config
+++ b/erlang/my_erlang/gen_fsm/ch6/gen_fsm_app/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+        {recon, "2.5.2"}
+       ]}.
+{plugins, [rebar3_hex]}.
 
 {relx, [{release, {gen_fsm_app, "0.1.0"},
          [gen_fsm_app,
