--- a/erlang/my_erlang/release/rebar3/ernie2/bsc/rebar.config
+++ b/erlang/my_erlang/release/rebar3/ernie2/bsc/rebar.config
@@ -1,7 +1,8 @@
 {erl_opts, [debug_info]}.
 %%{deps, []}.
 {deps, [
-	{lager, ".*", {git, "https://github.com/erlang-lager/lager", {branch, "master"}}}
+	{lager, "3.9.2"}
+	%{lager, ".*", {git, "https://github.com/erlang-lager/lager", {branch, "master"}}}
 ]}.
 
 %{goldrush, ".*", {git, "https://github.com/DeadZen/goldrush.git", {branch, "master"}}}
