--- a/erlang/my_erlang/application/ch9/dist.config
+++ b/erlang/my_erlang/application/ch9/dist.config
@@ -1,5 +1,5 @@
-[{kernel, [{distributed, [{bsc, 1000, [n1@localhost, {n2@localhost, n3@localhost}, n4@localhost]}]},
-	   {sync_nodes_mandatory, [n1@localhost]},
-	   {sync_nodes_optional, [n2@localhost, n3@localhost, n4@localhost]},
+[{kernel, [{distributed, [{bsc, 1000, ['n1@centos7-dev', {'n2@centos7-dev', 'n3@centos7-dev'}]}]},
+	   {sync_nodes_mandatory, ['n1@centos7-dev']},
+	   {sync_nodes_optional, ['n2@centos7-dev', 'n3@centos7-dev']},
 	   {sync_nodes_timeout, 15000}]},
  {bsc,  [{frequencies, [1,2,3,4,5,6]}]}].
