--- a/erlang/my_erlang/release/example-no-package/Makefile
+++ b/erlang/my_erlang/release/example-no-package/Makefile
@@ -12,10 +12,9 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 RUN_BIN=handle_release
 all:compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
-	cp start.sh ernie
 
 compile:${MODS:%=%.beam} 
-	mkdir -p ernie
+	cd bsc/src && make 
 
 #RUN_BIN=hello
 #run:
@@ -23,3 +22,4 @@ compile:${MODS:%=%.beam}
 
 clean:
 	rm -rf rm *.script *.boot *.beam ernie
+	cd bsc/src && make clean
