--- a/erlang/my_erlang/release/example-package/Makefile
+++ b/erlang/my_erlang/release/example-package/Makefile
@@ -11,11 +11,13 @@ MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
 RUN_BIN=handle_release
 all:compile
+	bash find_the_version.sh
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	cp start.sh ernie
 
 compile:${MODS:%=%.beam} 
 	mkdir -p ernie
+	cd bsc/src && make 
 
 #RUN_BIN=hello
 #run:
@@ -23,3 +25,4 @@ compile:${MODS:%=%.beam}
 
 clean:
 	rm -rf rm *.script *.boot *.beam ernie
+	cd bsc/src && make clean
